--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайт портфолио</title>
-    <link rel="stylesheet" href=".css/main.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./media.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -48,7 +48,7 @@
                     <!--// Card-->
                     <div class="card">
                         <a href="forest-travel.html" class="card-link">
-                            <img class="card-img" src="./img/Портфолио/работа3.jpg" alt="Личный сайт ">
+                            <img class="card-img" src="./img/Портфолио/интернет-магазин.jpg" alt="Личный сайт ">
                             <h3 class="card-title">Многостраничный сайт</h3>
                             <p>Верстка многостраничного сайта.</p>
                         </a>
