--- a/forest-travel.html
+++ b/forest-travel.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проект " Форест тревел"</title>
-    <link rel="stylesheet" href=".css/main.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./media.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
