--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <!--// Card-->
                     <div class="card">
                         <a href="forest-travel.html" class="card-link">
-                            <img class="card-img" src="./img/Портфолио/интернет-магазин.jpg" alt="Интернет магазин">
+                            <img class="card-img" src="./img/Solar screen3.png" alt="Интернет магазин">
                             <h3 class="card-title">Многостраничный сайт</h3>
                             <p>Верстка многостраничного сайта.</p>
                         </a>
